--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 </head>
 
 <body>
+  <button id="theme-toggle" style="font-size: 15px;">Dark/Light Mode</button>
     <header>
     <img src="logo.png" alt="Logo" style="width: 150px; height: auto;">
     <h1>Welcome to Your Own Website:  PoetryWali</h1>
     <nav>
-      <button style="font-size: 5px; background-color: #000000; color: white; padding: 1px 1px;"><b><u>
+      <button style="font-size: 5px; background-color: #121212; color: #e0e0e0; padding: 1px;"><b><u>
         <a href="#about">About</a></button></b></u>
-         <button style="font-size: 5px; background-color: #000000; color: white; padding: 1px 1px;"><b><u>
+         <button style="font-size: 5px; background-color: #121212; color: #e0e0e0; padding: 1px 1px;"><b><u>
         <a href="#contact">Contact</a></button></b></u>
-         <button style="font-size: 5px; background-color: #000000; color: white; padding: 1px 1px;"><b><u>
+         <button style="font-size: 5px; background-color: #121212; color: #e0e0e0; padding: 1px 1px;"><b><u>
         <a href="upload_form.html">Personalized</a></button>
         </button></b></u>
     </nav>
@@ -29,18 +30,25 @@
         <section id="about">
             <u><h2>About Me</h2></u>
             <p>Hi! Welcome to PoetryWali! Here you will find all kinds of poems and quotes, including special ones made just for you, to share your feelings. Enjoy exploring!</p>
-        </section>
-         <img src="hero.jpg" alt="Hero" style="width: 350px; height: auto;">
-         <br><br><br>
+         <img src="hero.jpg" alt="Hero" style="width: 320px; height: auto;">
+         <br><br>
+         </section>
          
     <section id="upload_form.html">
         <u><h2>Personalized Poetry or Quotes</h2></u>
         <p>Here you can get personalized poetry based on the details or an image you upload. You can also describe the specific features you want in your poetry. You can choose different themes and occasions for the poetry, or simply have poetry based on what the image describes. </p>
-         <button style="font-size: 20px; background-color: #FFFFFF; color: black; padding: 1px 1px;"><b><u>
-         <a href="upload_form.html">Upload</a></button>
+   <button style="font-size: 20px; background-color: white; color: black; padding: 1px 1px;"><b><u>
+       <a href="upload_form.html">Upload</a>
          </button></b></u>
+         <img src="personal.jpg" alt="Personal" style="width: 320px; height: auto;"><br><br>
          </section>
-         <img src="personal.jpg" alt="Personal" style="width: 330px; height: auto;"><br><br><br>
+
+<section>
+  <u><h2>Poetry and Poems</h2></u>
+<a href="/inspiration.html" target="_blank">Inspirational Poems</a><br>
+<a href="/motivation.html" target="_blank">Motivational Poems</a><br><br>
+ <img src="choice.jpg" alt="Choice" style="width: 320px; height: auto;">
+</section>
 
       <section id="contact">
            <u><h2>Contact</h2></u>
@@ -52,4 +60,4 @@
     </footer>
     <script src="script.js"></script>
 </body>
-</html>
+            </html>
